--- a/templates/index.html
+++ b/templates/index.html
@@ -1,19 +1,95 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>表白网站</title>
-  </head>
-  <body>
-    <h1>表白</h1>
-    <form>
-      <label for="name">请输入你的名字：</label>
-      <input type="text" id="name" name="name">
-      <br>
-      <label for="content">请输入表白内容：</label>
-      <textarea id="content" name="content"></textarea>
-      <br>
-      <button type="submit">提交</button>
-    </form>
-  </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>打字机效果</title>
+	<style>
+		body {
+			background-color: #f2f2f2;
+			font-family: Arial, sans-serif;
+			font-size: 50px; /* 增大字体 */
+			line-height: 1.5;
+			margin: 0;
+			padding: 0;
+		}
+
+		.grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+			grid-gap: 1px;
+
+			background-color: #ddd;
+			padding: 1px;
+		}
+
+		.grid-item {
+			background-color: #fff;
+			padding: 10px;
+			border: 1px solid #ccc;
+			text-align: left;
+			white-space: pre-wrap;
+			font-size: 50px; /* 增大字体 */
+			overflow-wrap: break-word;
+			word-wrap: break-word;
+			word-break: break-all;
+		}
+
+		@media (max-width: 767px) {
+			.grid {
+				grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+			}
+
+			.grid-item {
+				padding: 5px;
+				font-size: 28px; /* 增大字体 */
+			}
+		}
+	</style>
+</head>
+<body>
+	<div class="grid">
+		<div class="grid-item"></div>
+	</div>
+
+	<script>
+	    const name = "{{name}}";
+	    const pagecode = "{{pagecode}}";
+	    const words = "{{words}}";
+		const text1 = `亲爱的盛文`;
+		const text2 = `你好，这里是第二段话萨达萨达萨达萨达。你好，这里是第二段话萨达萨达萨达萨达。你好，这里是第二段话萨达萨达萨达萨达。你好，这里是第二段话萨达萨达萨达萨达。你好，这里是第二段话萨达萨达萨达萨达。你好，这里是第二段话萨达萨达萨达萨达。你好，这里是第二段话萨达萨达萨达萨达。`;
+		const gridItem = document.querySelector('.grid-item');
+		let currentIndex = 0;
+
+		function type(text, callback) {
+			if (currentIndex >= text.length) {
+				if (callback) {
+					callback();
+				}
+				return;
+			}
+
+			const currentChar = text[currentIndex];
+			const isLineBreak = currentChar === '\n';
+
+			if (isLineBreak) {
+				gridItem.innerHTML += '<br>';
+			} else {
+				gridItem.innerHTML += currentChar;
+			}
+
+			currentIndex++;
+
+			setTimeout(() => type(text, callback), 90);
+		}
+
+		type(text1, () => {
+			setTimeout(() => {
+				gridItem.innerHTML += '<br><br>&nbsp;&nbsp;';
+				currentIndex = 0;
+				type(text2);
+			}, 500);
+		});
+	</script>
+</body>
 </html>
