--- a/templates/login.html
+++ b/templates/login.html
@@ -1,13 +1,95 @@
 <!DOCTYPE html>
-
-
 <html>
-   <body>
-      <form action = "http://localhost:5000/login" method = "post">
-         <p>Enter Name:</p>
-         <p><input type = "text" name = "nm" /></p>
-         <p><input type = "submit" value = "submit" /></p>
-      </form>
-   <a href="/example?param1=value1&param2=value2">Link</a>
-   </body>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>你好，{{ name }}</title>
+	<style>
+		body {
+			background-color: #f2f2f2;
+			font-family: Arial, sans-serif;
+			font-size: 50px; /* 增大字体 */
+			line-height: 1.5;
+			margin: 0;
+			padding: 0;
+		}
+
+		.grid {
+			display: grid;
+			grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+			grid-gap: 1px;
+
+			background-color: #ddd;
+			padding: 1px;
+		}
+
+		.grid-item {
+			background-color: #fff;
+			padding: 10px;
+			border: 1px solid #ccc;
+			text-align: left;
+			white-space: pre-wrap;
+			font-size: 50px; /* 增大字体 */
+			overflow-wrap: break-word;
+			word-wrap: break-word;
+			word-break: break-all;
+		}
+
+		@media (max-width: 767px) {
+			.grid {
+				grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
+			}
+
+			.grid-item {
+				padding: 5px;
+				font-size: 28px; /* 增大字体 */
+			}
+		}
+	</style>
+</head>
+<body>
+	<div class="grid">
+		<div class="grid-item"></div>
+	</div>
+
+	<script>
+	    const name = "{{name}}";
+	    const pagecode = "{{pagecode}}";
+	    const text2 = "{{words}}";
+	    const t1="亲爱的"
+	    const text1 = `${t1}${name}:`;
+		const gridItem = document.querySelector('.grid-item');
+		let currentIndex = 0;
+
+		function type(text, callback) {
+			if (currentIndex >= text.length) {
+				if (callback) {
+					callback();
+				}
+				return;
+			}
+
+			const currentChar = text[currentIndex];
+			const isLineBreak = currentChar === '\n';
+
+			if (isLineBreak) {
+				gridItem.innerHTML += '<br>';
+			} else {
+				gridItem.innerHTML += currentChar;
+			}
+
+			currentIndex++;
+
+			setTimeout(() => type(text, callback), 90);
+		}
+
+		type(text1, () => {
+			setTimeout(() => {
+				gridItem.innerHTML += '<br><br>&nbsp;&nbsp;';
+				currentIndex = 0;
+				type(text2);
+			}, 500);
+		});
+	</script>
+</body>
 </html>
