--- a/templates/send.html
+++ b/templates/send.html
@@ -146,7 +146,7 @@
     }
 
     function showAuthorInfo() {
-        alert('这是在校大学生的一个创新项目，欢迎联系作者\n邮箱：2274525371@qq.com\nqq：2274525371');
+        alert('这是在校大学生的一个创新项目，联系作者\nqq：2274525371');
     }
 
     messageInput.addEventListener('input', () => {
