--- a/templates/login.html
+++ b/templates/login.html
@@ -79,7 +79,7 @@
 		const aboutBtn = document.querySelector('#about-btn');
 
 		function showAuthorInfo() {
-			alert('这是在校大学生的一个创新项目，联系作者\n邮箱: 2274525371@qq.com\nqq：2274525371\n版权所有 © 2023');
+			alert('这是在校大学生的一个创新项目，联系作者\nqq：2274525371\n版权所有 © 2023');
 		}
 
 		aboutBtn.addEventListener('click', showAuthorInfo);
@@ -95,27 +95,26 @@
 			const currentChar = text[currentIndex];
 			const isLineBreak = currentChar === '\n';
 
-			if (isLineBreak) {
-				gridItem.innerHTML += '<br>';
-			} else {
-				gridItem.innerHTML += currentChar;
-			}
+			if(isLineBreak) {
+gridItem.innerHTML += '<br>';
+} else {
+gridItem.innerHTML += currentChar;
+}
+				currentIndex++;
 
-			currentIndex++;
+		setTimeout(() => type(text, callback), 90);
+	}
 
-			setTimeout(() => type(text, callback), 90);
-		}
-
-		type(text1, () => {
-			setTimeout(() => {
-				gridItem.innerHTML += '<br><br>';
-				const spaceElement = document.createElement('span');
-spaceElement.innerHTML = '  ';
-gridItem.appendChild(spaceElement);
-currentIndex = 0;
-type(text2);
-}, 500);
-});
+	type(text1, () => {
+		setTimeout(() => {
+			gridItem.innerHTML += '<br><br>';
+			const spaceElement = document.createElement('span');
+			spaceElement.innerHTML = '&emsp;&emsp;';
+			gridItem.appendChild(spaceElement);
+			currentIndex = 0;
+			type(text2);
+		}, 500);
+	});
 
 </script>
 </body>
