--- a/templates/login.html
+++ b/templates/login.html
@@ -72,7 +72,7 @@
 	<script>
 	    const name = "{{name}}";
 	    const pagecode = "{{pagecode}}";
-	    const text2 = "阿斯顿撒旦撒旦撒{{words}}";
+	    const text2 = "{{words}}";
 	    const t1="亲爱的"
 	    const text1 = `${t1}${name}:`;
 		const gridItem = document.querySelector('.grid-item');
