--- a/templates/send.html
+++ b/templates/send.html
@@ -107,7 +107,7 @@
 <div id="container">
     <form id="message-form" action="/rose_words/success" method="post" onsubmit="return validateForm()">
         <div class="input-container">
-            <p>欢迎你来到这里！这里是鲜花编号{{ myPageCode }}的网络空间，请在这里留言吧，你写下的内容将被保留在该二维码上，注意你只有一次编辑的机会，一旦点击提交就不能再修改了</p>
+            <p>欢迎你来到这里！这里是鲜花编号{{ myPageCode }}的网络空间，请在这里留言吧，你写下的内容将被保留在该二维码上，注意你只有一次编辑的机会，一旦点击提交就不能再修改了<br><br></p>
             <label for="recipient-input">输入接收者：</label>
             <input type="text" id="recipient-input" name="recipient" placeholder="请输入接收者姓名">
         </div>
