增加攻略地点

--- a/templates/gonglve.html
+++ b/templates/gonglve.html
@@ -69,6 +69,13 @@
     <p>必带物品：雨伞/防晒/充电器<br><br></p>
     <p>来重庆必打卡推荐：(点击可以跳转到详情页面，有很多图片哦)<br><br></p>
     <img id="downloadable-image"  src="{{ url_for('static', filename='pics/001.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/002.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/003.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/004.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/005.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/006.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/007.png') }}"><br><br>
+        <img id="downloadable-image"  src="{{ url_for('static', filename='pics/008.png') }}"><br><br>
 
 </div>
 <!-- 添加悬浮按钮 -->
