尽管使用了缩率图片还是加载很慢，只有把图片放到托管网站imgur上了

--- a/templates/gonglve.html
+++ b/templates/gonglve.html
@@ -68,14 +68,14 @@
     <p>穿衣指南：短袖</p>
     <p>必带物品：雨伞/防晒/充电器<br><br></p>
     <p>来重庆必打卡推荐：(点击可以跳转到详情页面，有很多图片哦)<br><br></p>
-    <img       src="{{ url_for('static', filename='pics/001.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/002.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/003.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/004.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/005.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/006.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/007.png') }}"><br><br>
-        <img   src="{{ url_for('static', filename='pics/008.png') }}"><br><br>
+    <img       src="https://i.imgur.com/ZVvsjgI.png"><br><br>
+        <img   src="https://i.imgur.com/mHUF6B6_d.webp?maxwidth=1520&fidelity=grand"><br><br>
+        <img   src="https://i.imgur.com/1Wf4Iw0_d.webp?maxwidth=1520&fidelity=grand"><br><br>
+        <img   src="https://i.imgur.com/Z8tRSay_d.webp?maxwidth=1520&fidelity=grand"><br><br>
+        <img   src="https://i.imgur.com/8YZJj8E_d.webp?maxwidth=1520&fidelity=grand"><br><br>
+        <img   src="https://i.imgur.com/bZJBtzK.png"><br><br>
+        <img   src="https://i.imgur.com/wsvbl80_d.webp?maxwidth=1520&fidelity=grand"><br><br>
+        <img   src="https://i.imgur.com/shh5opq_d.webp?maxwidth=1520&fidelity=grand"><br><br>
 
 </div>
 <!-- 添加悬浮按钮 -->
