--- a/templates/gonglve.html
+++ b/templates/gonglve.html
@@ -68,14 +68,14 @@
     <p>穿衣指南：短袖</p>
     <p>必带物品：雨伞/防晒/充电器<br><br></p>
     <p>来重庆必打卡推荐：(点击可以跳转到详情页面，有很多图片哦)<br><br></p>
-    <img       src="https://i.imgur.com/ZVvsjgI.png"><br><br>
-        <img   src="https://i.imgur.com/mHUF6B6_d.webp?maxwidth=1520&fidelity=grand"><br><br>
-        <img   src="https://i.imgur.com/1Wf4Iw0_d.webp?maxwidth=1520&fidelity=grand"><br><br>
-        <img   src="https://i.imgur.com/Z8tRSay_d.webp?maxwidth=1520&fidelity=grand"><br><br>
-        <img   src="https://i.imgur.com/8YZJj8E_d.webp?maxwidth=1520&fidelity=grand"><br><br>
-        <img   src="https://i.imgur.com/bZJBtzK.png"><br><br>
-        <img   src="https://i.imgur.com/wsvbl80_d.webp?maxwidth=1520&fidelity=grand"><br><br>
-        <img   src="https://i.imgur.com/shh5opq_d.webp?maxwidth=1520&fidelity=grand"><br><br>
+    <img       src="http://asu328.bvimg.com/20051/ff55d441c183e7d6.png"><br><br>
+        <img   src="http://asu328.bvimg.com/20051/a6e01a55a62adddb.png"><br><br>
+        <img   src="http://asu328.bvimg.com/20051/9e34d454d20fdf6a.png"><br><br>
+        <img   src="http://asu328.bvimg.com/20051/d7a68cea77243ab3.png"><br><br>
+        <img   src="https://pcsdata.baidu.com/thumbnail/5953d120bkcb7d54a3bb1b4e498a51af?fid=3194696586-16051585-43209554201283&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-H1uJ7JvtHC4uZ1CDMrGXPTTgF3s%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+        <img   src="https://pcsdata.baidu.com/thumbnail/5c6e0de9erd3366508650283cd359f98?fid=3194696586-16051585-1072987026321423&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-pEqCEO6MD0TPXGXp6beZ7wwyrhI%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+        <img   src="https://pcsdata.baidu.com/thumbnail/c0eb9ab45ia256489fee4a0581a73e2e?fid=3194696586-16051585-289158660944893&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-p%2FwA0QHr47XbWSs3UWQdBY44v5E%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+        <img   src="https://pcsdata.baidu.com/thumbnail/b0aeda912u05e1ac77874f0593aa8122?fid=3194696586-16051585-32970838285256&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-9upCFxm3EfABTOzpu82vw5jh9io%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
 
 </div>
 <!-- 添加悬浮按钮 -->
