--- a/templates/jiangtangongyuan.html
+++ b/templates/jiangtangongyuan.html
@@ -64,7 +64,10 @@
 <body>
 <div id="container">
     <p>江滩公园照片墙<br><br></p>
-<img  src="https://pcsdata.baidu.com/thumbnail/f69fb3fbcoef90fd57b833d14bc85c2e?fid=3194696586-16051585-380390090422375&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-EEEztdIIhwhOLHHXt4ZSVtsdgkM%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+<img  src="https://pcsdata.baidu.com/thumbnail/fd449b4f9k892494445a0c5b19907717?fid=3194696586-16051585-996448106221411&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-gcOO9URkn3FJiCGf3Z%2F8Y5l7kYs%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491984642015891740&dp-callid=0&time=1682924400&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+<img  src="https://pcsdata.baidu.com/thumbnail/c48b9c979r82795ee60e72905ede1d11?fid=3194696586-16051585-1078672497206169&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-Y52YRzZEsLpxynRtqaCJdenxqJA%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=492013381223314169&dp-callid=0&time=1682924400&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+<img  src="https://pcsdata.baidu.com/thumbnail/f54a3efeftc273e33a840c541d4e2020?fid=3194696586-16051585-179035151230060&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-LSjPUrvo3BBCOzP65Or5t%2Fzcahw%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=492013381223314169&dp-callid=0&time=1682924400&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
+<img  src="https://pcsdata.baidu.com/thumbnail/26c036ed6l6d044924bf772f538f4a05?fid=3194696586-16051585-102806458903174&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-%2B2dMN8P1VHuqekSSyjsmSfzK06o%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=492013381223314169&dp-callid=0&time=1682924400&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br>
 
 </div>
 <!-- 添加悬浮按钮 -->
