--- a/templates/gonglve.html
+++ b/templates/gonglve.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>输入</title>
+    <title>重庆攻略</title>
     <style>
         * {
             box-sizing: border-box;
@@ -63,19 +63,19 @@
 </head>
 <body>
 <div id="container">
-    <p>作为重庆本地花花，必须热烈欢迎来自全国各地的你们到这里玩，并且乖乖给你附上攻略，让你们以后一想到重庆都是满满的美好回忆！<br><br></p>
+    <p>我是一支来自重庆的玫瑰，必须热烈欢迎来自全国各地的你们到这里游玩，并且乖乖给你附上攻略，希望你们以后一想到重庆都是满满的美好回忆！<br><br></p>
     <p>五一天气：15-26度</p>
     <p>穿衣指南：短袖</p>
     <p>必带物品：雨伞/防晒/充电器<br><br></p>
-    <p>来重庆必打卡推荐：(点击可以跳转到详情页面，有很多图片哦)<br><br></p>
-    <a href="http://47.120.42.84:5000/jiangtangongyuan" target="_blank">  <img src="https://pcsdata.baidu.com/thumbnail/5c6e0de9erd3366508650283cd359f98?fid=3194696586-16051585-1072987026321423&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-pEqCEO6MD0TPXGXp6beZ7wwyrhI%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-       <a href="http://47.120.42.84:5000/jiefangbei" target="_blank"> <img   src="https://pcsdata.baidu.com/thumbnail/c0eb9ab45ia256489fee4a0581a73e2e?fid=3194696586-16051585-289158660944893&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-p%2FwA0QHr47XbWSs3UWQdBY44v5E%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-        <a href="http://47.120.42.84:5000/hongyadong" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/b0aeda912u05e1ac77874f0593aa8122?fid=3194696586-16051585-32970838285256&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-9upCFxm3EfABTOzpu82vw5jh9io%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-        <a href="http://47.120.42.84:5000/xijie" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/76d8b1dd8g65399440dd01f66763c973?fid=3194696586-16051585-644924771862383&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-nqYgZs5Zw33wP9AZ5LoNi5v50cU%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-        <a href="http://47.120.42.84:5000/nanshanyikeshu" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/5953d120bkcb7d54a3bb1b4e498a51af?fid=3194696586-16051585-43209554201283&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-H1uJ7JvtHC4uZ1CDMrGXPTTgF3s%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-        <a href="http://47.120.42.84:5000/changjiangsuodao" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/cbd511fceq609ae9eb2f971b7e9ac460?fid=3194696586-16051585-1061217204250637&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-9xIgv3HgxUJqOWE4jzSLfk2budc%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-        <a href="http://47.120.42.84:5000/shanhugongyuan" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/3fc1b6509q7c02a54e7c3a1e86e5e32c?fid=3194696586-16051585-871020965992682&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-2p7JkbC83zLwUv3YOighqjYf35Q%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
-        <a href="http://47.120.42.84:5000/ciqikou" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/f69fb3fbcoef90fd57b833d14bc85c2e?fid=3194696586-16051585-380390090422375&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-EEEztdIIhwhOLHHXt4ZSVtsdgkM%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+    <p>来重庆必打卡推荐：(点击可以跳转到详情页面，有很多图片可以参考哦)<br><br></p>
+    <a href="http://47.120.42.84:5000/places/jiangtangongyuan" target="_blank">  <img src="https://pcsdata.baidu.com/thumbnail/5c6e0de9erd3366508650283cd359f98?fid=3194696586-16051585-1072987026321423&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-pEqCEO6MD0TPXGXp6beZ7wwyrhI%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+       <a href="http://47.120.42.84:5000/places/jiefangbei" target="_blank"> <img   src="https://pcsdata.baidu.com/thumbnail/c0eb9ab45ia256489fee4a0581a73e2e?fid=3194696586-16051585-289158660944893&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-p%2FwA0QHr47XbWSs3UWQdBY44v5E%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/hongyadong" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/b0aeda912u05e1ac77874f0593aa8122?fid=3194696586-16051585-32970838285256&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-9upCFxm3EfABTOzpu82vw5jh9io%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/xijie" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/76d8b1dd8g65399440dd01f66763c973?fid=3194696586-16051585-644924771862383&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-nqYgZs5Zw33wP9AZ5LoNi5v50cU%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/nanshanyikeshu" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/5953d120bkcb7d54a3bb1b4e498a51af?fid=3194696586-16051585-43209554201283&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-H1uJ7JvtHC4uZ1CDMrGXPTTgF3s%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/changjiangsuodao" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/cbd511fceq609ae9eb2f971b7e9ac460?fid=3194696586-16051585-1061217204250637&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-9xIgv3HgxUJqOWE4jzSLfk2budc%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/shanhugongyuan" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/3fc1b6509q7c02a54e7c3a1e86e5e32c?fid=3194696586-16051585-871020965992682&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-2p7JkbC83zLwUv3YOighqjYf35Q%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/ciqikou" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/f69fb3fbcoef90fd57b833d14bc85c2e?fid=3194696586-16051585-380390090422375&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-EEEztdIIhwhOLHHXt4ZSVtsdgkM%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=491460279201503830&dp-callid=0&time=1682920800&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
 
 </div>
 <!-- 添加悬浮按钮 -->
