--- a/templates/gonglve.html
+++ b/templates/gonglve.html
@@ -70,7 +70,7 @@
     <p>来重庆必打卡推荐：(点击可以跳转到详情页面，有很多图片可以参考哦)<br><br></p>
     <a href="http://47.120.42.84:5000/places/江滩公园" target="_blank">  <img src="http://asu328.bvimg.com/20051/a6e01a55a62adddb.png"><br><br></a>
        <a href="http://47.120.42.84:5000/places/解放碑" target="_blank"> <img   src="http://asu328.bvimg.com/20051/ff55d441c183e7d6.png"><br><br></a>
-        <a href="http://47.120.42.84:5000/places/洪崖洞" target="_blank"><img   src="https://pcsdata.baidu.com/thumbnail/b0aeda912u05e1ac77874f0593aa8122?fid=3194696586-16051585-32970838285256&rt=pr&sign=FDTAER-yUdy3dSFZ0SVxtzShv1zcMqd-kZRBIwmf432l1OVzINPRcUL6Z1E%3D&expires=2h&chkv=0&chkbd=0&chkpc=&dp-logid=493755864036768328&dp-callid=0&time=1682931600&bus_no=26&size=c1600_u1600&quality=100&vuk=-&ft=video"><br><br></a>
+        <a href="http://47.120.42.84:5000/places/洪崖洞" target="_blank"><img   src="http://asu328.bvimg.com/20051/9e34d454d20fdf6a.png"><br><br></a>
         <a href="http://47.120.42.84:5000/places/熙街" target="_blank"><img   src="http://asu328.bvimg.com/20051/3645c5e4b6bdc7bd.png"><br><br></a>
         <a href="http://47.120.42.84:5000/places/南山一棵树" target="_blank"><img   src="http://asu328.bvimg.com/20051/5823ddd7dc8d96c1.png"><br><br></a>
         <a href="http://47.120.42.84:5000/places/长江索道" target="_blank"><img   src="http://asu328.bvimg.com/20051/d7a68cea77243ab3.png"><br><br></a>
