--- a/templates/login.html
+++ b/templates/login.html
@@ -60,14 +60,17 @@
 			font-size: 16px;
 			border-radius: 5px;
 		}
-
+		#travel_link {
+			font-size: 18px;
+		}
 	</style>
-	<a href="http://47.120.42.84:5000/rose_words/gonglve" target="_blank">重庆旅游攻略，请点我!</a>
+
 </head>
 <body>
-
+	<a id = "travel_link" href="http://47.120.42.84:5000/rose_words/gonglve" >重庆旅游攻略，请点我!</a>
 
 	<div class="grid">
+
 		<div class="grid-item"></div>
 	</div>
 	<button id="about-btn">关于</button>
