--- a/templates/send.html
+++ b/templates/send.html
@@ -108,12 +108,12 @@
 <div id="container">
     <form id="message-form" action="/rose_words/success" method="post" onsubmit="return validateForm()">
         <div class="input-container">
-            <p>欢迎你来到这里！这里是鲜花编号{{ id }}的网络空间，这里有一份给你的旅游攻略， <a href="http://47.120.42.84:5000/rose_words/gonglve" target="_blank">请点我!</a>请在这里留言吧，你写下的内容将被保留在该二维码上，注意你只有一次编辑的机会，一旦点击提交就不能再修改了<br><br></p>
-            <label for="recipient-input">输入接收者：</label>
-            <input type="text" id="recipient-input" name="recipient" placeholder="请输入接收者姓名">
+            <p>欢迎你来到编号为{{ id }}的爱印记空间，请在这里留下你想对TA说的话，当你提交后再次扫码就可以看到你的话啦！<br><br></p>
+            <label for="recipient-input">输入TA的姓名：</label>
+            <input type="text" id="recipient-input" name="recipient" placeholder="输入TA的姓名，可以加一些称谓">
         </div>
         <div class="input-container">
-            <label for="message-input">输入消息内容：</label>
+            <label for="message-input">输入你想对TA说的话：</label>
             <textarea id="message-input" name="message" placeholder="请输入消息内容"></textarea>
             <div id="word-count"></div>
         </div>
